// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Initializer /> web3Initialized=false matches snapshot 1`] = `
<Initializer
  NoProvider={[Function]}
  WrongNetwork={[Function]}
/>
`;

exports[`<Initializer /> web3Initialized=true, networkId=0, isCorrectNetwork=false matches snapshot 1`] = `
<Initializer
  NoProvider={[Function]}
  WrongNetwork={[Function]}
>
  <WrongNetwork
    networkId={0}
  >
    <div
      className="wrongNetwork"
    />
  </WrongNetwork>
</Initializer>
`;

exports[`<Initializer /> web3Initialized=true, networkId=0, isCorrectNetwork=true matches snapshot 1`] = `
<Initializer
  NoProvider={[Function]}
  WrongNetwork={[Function]}
>
  <div
    className="test"
  />
</Initializer>
`;

exports[`<Initializer /> web3Initialized=true, networkId=undefined matches snapshot 1`] = `
<Initializer
  NoProvider={[Function]}
  WrongNetwork={[Function]}
>
  <NoProvider>
    <div
      className="noProvider"
    />
  </NoProvider>
</Initializer>
`;
